<resources xmlns:xliff="http://schemas.android.com/apk/res-auto">
    <!--
     Used in Action Bar, and in AndroidManifest to tell the device the name of this app.
     It's to keep this short, so your launcher icon isn't displayed with "The greatest Wea"
     or something similar.
     -->
    <string name="app_name">Doodles Archive</string>

    <!--
         By convention, "action" denotes that this String will be used as the label for an Action,
         typically from the action bar.  The ActionBar is limited real estate, so shorter is better.
    -->
    <string name="action_settings">Settings</string>
    <string name="action_share">Share</string>

    <!-- Menu label to fetch updated doodle info from the server -->
    <string name="title_activity_detail">Image Doodle</string>
    <string name="title_activity_settings">Settings</string>

    <!-- Label for the year preference [CHAR LIMIT=30] -->
    <string name="pref_year_label">Year</string>

    <!-- Key name for storing year in SharedPreferences [CHAR LIMIT=NONE] -->
    <string name="pref_year_key" translatable="false">Year</string>

    <!-- Default year preference [CHAR LIMIT=NONE] -->
    <string name="pref_year_default" translatable="false">2015</string>


    <!-- Label for the month preference [CHAR LIMIT=30] -->
    <string name="pref_month_label">Month</string>

    <!-- Key name for storing month in SharedPreferences [CHAR LIMIT=NONE] -->
    <string name="pref_month_key" translatable="false">Month</string>

    <!-- Default month preference [CHAR LIMIT=NONE] -->
    <string name="pref_month_default" translatable="false">3</string>

    <!-- SyncAdapter related -->
    <string name="sync_account_type">doodlesarchive.fouomene.com</string>
    <string name="content_authority">com.fouomene.doodlesarchive.app</string>
    <string name="textload">Click on Doodle to view image.</string>
    <string name="nodoodlefound">No doodle found for this year and month</string>

    <!-- Notification Format -->
    <string name="format_notification">Doodle: <xliff:g id="title">%1$s</xliff:g> Run date: <xliff:g id="rundate">%2$s</xliff:g></string>

    <!-- Strings related to Notification preference -->
    <string name="pref_last_notification">last_notification</string>

    <!-- Strings related to Notification Enabled preference -->
    <string name="pref_enable_notifications_key" translatable="false">enable_notifications</string>
    <string name="pref_enable_notifications_label">Doodle Notifications</string>

    <string name="pref_enable_notifications_true">Enabled</string>
    <string name="pref_enable_notifications_false">Not Enabled</string>
    <string name="pref_enable_notifications_default" translatable="false">true</string>

</resources>
